--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,23 @@ repository = "https://github.com/storyfeet/dahufi_util"
 [lib]
 path="src/lib.rs"
 name="dahufi_lib"
+crate-type =["cdylib","rlib"]
 
 [[bin]]
 path="src/main.rs"
 name="dahufi"
 
+[features]
+default = ["console_error_panic_hook"]
+
 [dependencies]
+wasm-bindgen="0.2.63"
 gobble = "0.6.3" 
 anyhow = "1.0.31"
 clap_conf = "0.1.5"
 glob = "0.3.0"
+
+#JS panic log
+console_error_panic_hook = {version="0.1.6" , optional = true}
+
+
